[package]
name = "vehicle_speed_subscriber"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vehicle_signals = { git = "https://github.com/sjames/vehicle_signals.git"}
cyclonedds-rs = {git = "https://github.com/sjames/cyclonedds-rs.git"}
